Finished API + Express AND added Angular

--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -7,6 +7,5 @@ block content
         h1= title
   .row
     .col-md-6.col-sm-12
-      each Paragraph in companyInfo
-        p= Paragraph.Paragraph
-            <br /><br />
+      p= content
+          <br /><br />
